[gd_scene load_steps=10 format=3 uid="uid://c8ue2voev31dq"]

[ext_resource type="Script" path="res://Entities/entities_script/enemy_2.gd" id="1_qk5bk"]
[ext_resource type="Texture2D" uid="uid://u4s36s1voque" path="res://Sprites/slimerawleftandright.png" id="1_yfjfm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2247p"]
size = Vector2(18, 19)

[sub_resource type="Animation" id="Animation_43sha"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../hitbox/hitbox_collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_hyjlo"]
resource_name = "walkleft"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../hitbox/hitbox_collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.6, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, false, false, false, false, false]
}

[sub_resource type="Animation" id="Animation_an51f"]
resource_name = "walkright"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [17, 16, 15, 14, 13, 12, 11, 10, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wdeil"]
_data = {
"RESET": SubResource("Animation_43sha"),
"walkleft": SubResource("Animation_hyjlo"),
"walkright": SubResource("Animation_an51f")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q46le"]
size = Vector2(25.7143, 27.1429)

[sub_resource type="CircleShape2D" id="CircleShape2D_w31tc"]

[node name="enemy_2" type="CharacterBody2D"]
collision_layer = 32
collision_mask = 8
script = ExtResource("1_qk5bk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_yfjfm")
hframes = 9
vframes = 2

[node name="enemy_collider" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_2247p")

[node name="anim" type="AnimationPlayer" parent="."]
root_node = NodePath("../enemy_collider")
libraries = {
"": SubResource("AnimationLibrary_wdeil")
}

[node name="hitbox" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 32
collision_mask = 3

[node name="hitbox_collider" type="CollisionShape2D" parent="hitbox"]
position = Vector2(3.57628e-07, -0.5)
scale = Vector2(0.7, 0.7)
shape = SubResource("RectangleShape2D_q46le")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="chase_box" type="Area2D" parent="."]
scale = Vector2(1.5, 1.5)
collision_layer = 2
collision_mask = 64

[node name="CollisionShape2D2" type="CollisionShape2D" parent="chase_box"]
scale = Vector2(7, 7)
shape = SubResource("CircleShape2D_w31tc")

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="chase_box" to="." method="_on_chase_box_area_entered"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
